reformatting the columns into three of twelve

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <button class=“button-primary”>Button element</button>
     <input class=“button-primary” type=“submit” value=“submit input”>
-    <div id='main'></div>
+    <div class='container'></div>
     <script src="./assets/scripts/script.js"></script>
 </body>
 
