reformat with jquery css to change the grid layout manually

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 
 <body>
-    <button class=“button-primary”>Button element</button>
-    <input class=“button-primary” type=“submit” value=“submit input”>
-    <div class='container'></div>
+    <!-- <button class=“button-primary”>Button element</button>
+    <input class=“button-primary” type=“submit” value=“submit input”> -->
+    <div class='container'>
+        <h1>Title goes here</h1>
+
+    </div>
     <script src="./assets/scripts/script.js"></script>
 </body>
 
