--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button class=“button-primary”>Button element</button>
     <input class=“button-primary” type=“submit” value=“submit input”>
     <div id='main'></div>
-    <script src="./assets/scripts/script.js"></script>
+    <script src="./assets/scripts/script2.js"></script>
 </body>
 
 </html>
