--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <button class=“button-primary”>Button element</button>
+    <button class=“button-secondary>2nd Button</button>
     <input class=“button-primary” type=“submit” value=“submit input”>
     <div id='main'></div>
     <script src="./assets/scripts/script2.js"></script>
